--- a/conf/datamanager_docker.conf
+++ b/conf/datamanager_docker.conf
@@ -3,8 +3,7 @@
 #########################################
 
 # Path where the logfile will be created
-log_path            = /opt/hidra/logs
-#log_path            = /var/log/hidra
+log_path            = /var/log/hidra
 
 # Filename used for logging
 log_name            = datamanager.log
@@ -28,7 +27,6 @@ com_port            = 50000
 
 # List of hosts allowed to connect
 #whitelist           = []
-#whitelist           = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
 whitelist           = None
 
 # ZMQ port to get new requests
@@ -52,9 +50,6 @@ control_sub_port    = 50006
 # Inotifyx is not python3 compatible,
 # see https://bugs.launchpad.net/inotifyx/+bug/1006053
 event_detector_type = inotifyx_events
-#event_detector_type = watchdog_events
-#event_detector_type = zmq_events
-#event_detector_type = http_events
 
 # Subdirectories to be monitored and to store data to. These directory have to
 # exist when HiDRA is started and should not be removed during the run.
@@ -106,11 +101,7 @@ event_det_port       = 50003
 
 # IP/DNS name of the Eiger detector
 # (needed if event_detector_type is http_events)
-#haspp11e1m.desy.de
-#eiger_ip             = 192.168.138.52
 eiger_ip             = lsdma-lab04
-#lsdma-lab04.desy.de
-#eiger_ip             = 131.169.55.170
 # API version of the Eiger detector
 # (needed if event_detector_type is http_events)
 eiger_api_version    = 1.5.0
@@ -123,8 +114,6 @@ eiger_api_version    = 1.5.0
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
 data_fetcher_type    = file_fetcher
-#data_fetcher_type    = zmq_fetcher
-#data_fetcher_type    = http_fetcher
 
 # If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen to
 # (needed if event_detector_type is zmq_events)
@@ -139,7 +128,6 @@ use_data_stream      = True
 # (only needed if use_data_stream is enabled)
 #data_stream_targets  = [["asap3-p00", 50100]]
 data_stream_targets  = [["zitpcx19282", 50100]]
-#data_stream_targets  = [["zitpcx22614w", 50100]]
 
 # Chunk size of file-parts getting send via zmq
 #1024*1024*10
@@ -151,10 +139,6 @@ chunksize            = 10485760
 # ZMQ-router port which coordinates the load-balancing to the worker-processes
 # (needed if running on Windows)
 router_port          = 50004
-
-# Target to move the files into (needed if store_data is enabled)
-local_target         = /opt/hidra/data/target
-#local_target         = /gpfs
 
 # Flag describing if the data should be stored in local_target
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
