--- a/Dockerfile.receiver
+++ b/Dockerfile.receiver
@@ -4,16 +4,14 @@ RUN apt update && apt install -y \
     git \
     python \
     python-pip \
-    vim \
-    iputils-ping
+    vim
 RUN pip install --upgrade pip && pip install \
     pyzmq \
     setproctitle \
-    six \
-    inotifyx
+    six
 RUN cd /opt && \
     git clone https://stash.desy.de/scm/hidra/hidra.git && \
     cd hidra && \
     git checkout develop && \
     mkdir /var/log/hidra
-ENTRYPOINT ["python", "/opt/hidra/src/sender/datamanager.py", "--verbose", "--config_file", "/opt/hidra/conf/datamanager_docker.conf"]
+ENTRYPOINT ["python", "/opt/hidra/src/receiver/datareceiver.py", "--verbose", "--config_file", "/opt/hidra/conf/datareceiver_docker.conf"]
