Renamed eiger specific parameters to be more generic

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -18,9 +18,7 @@ procname            = hidra
 
 # IP/DNS name of the interface to bind to for external communication
 ext_ip              = 0.0.0.0
-#ext_ip              = zitpcx19282
-#ext_ip              = 131.169.185.121 ; #zitpcx19282
-#ext_ip              = 131.169.251.55 ; #asap3-p00
+#ext_ip              = asap3-p00
 
 #########################################
 ####   SignalHandler Configuration   ####
@@ -30,9 +28,9 @@ ext_ip              = 0.0.0.0
 com_port            = 50000
 
 # List of hosts allowed to connect
-whitelist           = ["localhost"]
-#whitelist           = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
-#whitelist           = None
+#whitelist           = []
+#whitelist           = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "lsdma-lab04"]
+whitelist           = None
 
 # ZMQ port to get new requests
 request_port        = 50001
@@ -109,16 +107,12 @@ time_till_closed     = 2
 # (needed if event_detector_type is zmq_events)
 event_det_port       = 50003
 
-# IP/DNS name of the Eiger detector
+# IP/DNS name of the detector
 # (needed if event_detector_type is http_events)
-#haspp11e1m.desy.de
-#eiger_ip             = 192.168.138.52
-eiger_ip             = lsdma-lab04
-#lsdma-lab04.desy.de
-#eiger_ip             = 131.169.55.170
-# API version of the Eiger detector
+det_ip             = lsdma-lab04
+# API version of the detector
 # (needed if event_detector_type is http_events)
-eiger_api_version    = 1.5.0
+det_api_version    = 1.5.0
 
 
 #########################################
@@ -142,7 +136,8 @@ number_of_streams    = 8
 use_data_stream      = False
 # Fixed host and port to send the data to with highest priority
 # (only needed if use_data_stream is enabled)
-data_stream_targets  = [["zitpcx19282", 50100]]
+data_stream_targets  = [["asap3-p00", 50100]]
+#data_stream_targets  = [["zitpcx19282", 50100]]
 #data_stream_targets  = [["zitpcx22614w", 50100]]
 
 # Chunk size of file-parts getting send via zmq
@@ -156,7 +151,7 @@ chunksize            = 10485760
 # (needed if running on Windows)
 router_port          = 50004
 
-# Target to move the files into (needed if store_data is enabled)
+# Target directory to move the files into (needed if store_data is enabled)
 local_target         = /opt/hidra/data/target
 #local_target         = /gpfs
 
