--- a/conf/datareceiver.conf
+++ b/conf/datareceiver.conf
@@ -22,9 +22,9 @@ procname          = hidra-receiver
 #
 # List of hosts allowed to receive data from
 
-#whitelist         = a3p02.1-hosts
+#whitelist         = a3p03-hosts
 whitelist         = None
-#whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
+#whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "zitpcx22614w", "lsdma-lab04", "zitpcx17858"]
 #whitelist         = ["localhost"]
 
 # Where incoming data will be stored to
@@ -37,5 +37,3 @@ data_stream_ip    = zitpcx19282.desy.de
 
 # TCP port of data pipe
 data_stream_port  = 50100
-
-
