--- a/conf/datamanager_docker.conf
+++ b/conf/datamanager_docker.conf
@@ -99,12 +99,12 @@ time_till_closed     = 2
 # (needed if event_detector_type is zmq_events)
 event_det_port       = 50003
 
-# IP/DNS name of the Eiger detector
+# IP/DNS name of the detector
 # (needed if event_detector_type is http_events)
-eiger_ip             = lsdma-lab04
-# API version of the Eiger detector
+det_ip             = lsdma-lab04
+# API version of the detector
 # (needed if event_detector_type is http_events)
-eiger_api_version    = 1.5.0
+det_api_version    = 1.5.0
 
 
 #########################################
