Fixed typos and pep8 and Added option deferred_error_handling

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -56,6 +56,7 @@ event_detector_type = inotifyx_events
 #event_detector_type = watchdog_events
 #event_detector_type = zmq_events
 #event_detector_type = http_events
+#event_detector_type = hidra_events
 
 # Subdirectories to be monitored and to store data to. These directory have to
 # exist when HiDRA is started and should not be removed during the run.
@@ -103,13 +104,17 @@ action_time          = 10
 # (needed if event_detector is inotifyx_events (for clean up) or watchdog_events)
 time_till_closed     = 2
 
+# ZMQ port to get incoming data from
+# (needed if event_detector_type is hidra_events)
+ext_data_port       = 50100
+
 # ZMQ port to get events from
 # (needed if event_detector_type is zmq_events)
 event_det_port       = 50003
 
 # IP/DNS name of the detector
 # (needed if event_detector_type is http_events)
-det_ip             = lsdma-lab04
+det_ip             = asap3-mon
 # API version of the detector
 # (needed if event_detector_type is http_events)
 det_api_version    = 1.5.0
@@ -124,6 +129,7 @@ det_api_version    = 1.5.0
 data_fetcher_type    = file_fetcher
 #data_fetcher_type    = zmq_fetcher
 #data_fetcher_type    = http_fetcher
+#data_fetcher_type    = hidra_fetcher
 
 # If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen to
 # (needed if event_detector_type is zmq_events)
@@ -142,7 +148,6 @@ data_stream_targets  = [["asap3-p00", 50100]]
 
 # Chunk size of file-parts getting send via zmq
 #1024*1024*10
-#chunksize            = 102400
 chunksize            = 10485760
 #1024*1024*1024
 #chunksize            = 1073741824
@@ -163,8 +168,16 @@ store_data           = False
 # options are:
 # True - data stays on the source
 # False - data is removed from the source after processing it
+# deferred_error_handling - only supported if use_data_stream is enabled;
+#                           datamanager gets a feedback if the data writing was
+#                           successful
 # with_confirmation - only supported if use_data_stream is enabled;
 #                     data is removed from the source only after the target
 #                     sent a verification
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
-remove_data          = False
+remove_data          = True
+#remove_data          = deferred_error_handling
+
+# Test signal port to check if the data receiver is having problems
+# (needed if remove_data is set to async_confirmation or sync_confirmation)
+test_port = 50050
