Added cleaner class to enable remove option with_confirmation

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -54,9 +54,9 @@ control_sub_port    = 50006
 # see https://bugs.launchpad.net/inotifyx/+bug/1006053
 event_detector_type = inotifyx_events
 #event_detector_type = watchdog_events
-#event_detector_type = zmq_events
 #event_detector_type = http_events
 #event_detector_type = hidra_events
+#event_detector_type = zmq_events
 
 # Subdirectories to be monitored and to store data to. These directory have to
 # exist when HiDRA is started and should not be removed during the run.
@@ -106,7 +106,7 @@ time_till_closed     = 2
 
 # ZMQ port to get incoming data from
 # (needed if event_detector_type is hidra_events)
-ext_data_port       = 50100
+ext_data_port       = 50101
 
 # ZMQ port to get events from
 # (needed if event_detector_type is zmq_events)
@@ -127,9 +127,9 @@ det_api_version    = 1.5.0
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
 data_fetcher_type    = file_fetcher
-#data_fetcher_type    = zmq_fetcher
 #data_fetcher_type    = http_fetcher
 #data_fetcher_type    = hidra_fetcher
+#data_fetcher_type    = zmq_fetcher
 
 # If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen to
 # (needed if event_detector_type is zmq_events)
@@ -171,13 +171,22 @@ store_data           = False
 # deferred_error_handling - only supported if use_data_stream is enabled;
 #                           datamanager gets a feedback if the data writing was
 #                           successful
-# with_confirmation - only supported if use_data_stream is enabled;
+# with_confirmation - only supported if use_data_stream is enabled and
+#                     data_fetcher_type is file_fetcher or http_fetcher;
 #                     data is removed from the source only after the target
 #                     sent a verification
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
-remove_data          = True
+#remove_data          = True
+remove_data          = False
 #remove_data          = deferred_error_handling
+#remove_data          = with_confirmation
 
 # Test signal port to check if the data receiver is having problems
-# (needed if remove_data is set to async_confirmation or sync_confirmation)
 test_port = 50050
+
+# ZMQ port to communicate with cleaner process
+# (needed if running on Windows)
+cleaner_port = 50051
+
+# Confirmation socket to get a confirmation for each data message sent)
+confirmation_port = 50052
