--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -132,8 +132,17 @@ data_fetcher_type    = file_fetcher
 #data_fetcher_type    = zmq_fetcher
 
 # If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen to
-# (needed if event_detector_type is zmq_events)
+# (needed if event_detector_type is zmq_events or if on windows and
+#  event_detector_type is http_events)
 data_fetcher_port    = 50010
+
+# Test signal port to notify the data sender about problems
+# (needed if event_detector_type is hidra_events)
+status_check_resp_port = 50011
+
+# Confirmation socket to send a confirmation for each data message sent
+# (needed if event_detector_type is hidra_events)
+confirmation_resp_port = 50012
 
 # Number of parallel data streams
 number_of_streams    = 8
@@ -182,11 +191,11 @@ remove_data          = False
 #remove_data          = with_confirmation
 
 # Test signal port to check if the data receiver is having problems
-test_port = 50050
+status_check_port = 50050
 
 # ZMQ port to communicate with cleaner process
 # (needed if running on Windows)
 cleaner_port = 50051
 
-# Confirmation socket to get a confirmation for each data message sent)
+# Confirmation socket to get a confirmation for each data message sent
 confirmation_port = 50052
