--- a/conf/datamanager_windows.conf
+++ b/conf/datamanager_windows.conf
@@ -94,13 +94,17 @@ action_time          = 10
 # watchdog_events)
 time_till_closed     = 2
 
+# ZMQ port to get incoming data from
+# (needed if event_detector_type is hidra_events)
+ext_data_port       = 50101
+
 # ZMQ port to get events from
 # (needed if event_detector_type is zmq_events)
 event_det_port       = 50003
 
 # IP/DNS name of the detector
 # (needed if event_detector_type is http_events)
-det_ip             = lsdma-lab04
+det_ip             = asap3-mon
 # API version of the detector
 # (needed if event_detector_type is http_events)
 det_api_version    = 1.5.0
@@ -119,6 +123,15 @@ data_fetcher_type    = file_fetcher
 # (needed if event_detector_type is zmq_events)
 data_fetcher_port    = 50010
 
+# Test signal port to notify the data sender about problems
+# (needed if event_detector_type is hidra_events)
+status_check_resp_port = 50011
+
+# Confirmation socket to send a confirmation for each data
+# message sent
+# needed if event_detector_type is hidra_events)
+confirmation_resp_port = 50012
+
 # Number of parallel data streams
 number_of_streams    = 8
 
@@ -126,17 +139,18 @@ number_of_streams    = 8
 use_data_stream      = False
 # Fixed host and port to send the data to with highest priority
 # (only needed if use_data_stream is enabled)
-data_stream_targets  = [["zitpcx19282", 50100]]
+data_stream_targets  = [["asap3-p00", 50100]]
 
 # Chunk size of file-parts getting send via zmq
+#1024*1024*10
 chunksize            = 10485760
 
-# ZMQ-router port which coordinates the load-balancing to the
-# worker-processes
+# ZMQ-router port which coordinates the load-balancing to the worker-processes
 # (needed if running on Windows)
 router_port          = 50004
 
-# Target to move the files into (needed if store_data is enabled)
+# Target directory to move the files into
+# (needed if store_data is enabled)
 local_target         = D:\opt\hidra\data\target
 
 # Flag describing if the data should be stored in local_target
@@ -147,8 +161,24 @@ store_data           = False
 # options are:
 # True - data stays on the source
 # False - data is removed from the source after processing it
+# deferred_error_handling - only supported if use_data_stream is
+#                           enabled;
+#                           datamanager gets a feedback if the
+#                           data writing was successful
 # with_confirmation - only supported if use_data_stream is
-#                     enabled; data is removed from the source
-#                     only after the target sent a verification
+#                     enabled and data_fetcher_type is
+#                     file_fetcher or http_fetcher;
+#                     data is removed from the source only after
+#                     the target sent a verification
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
 remove_data          = False
+
+# Test signal port to check if the data receiver is having problems
+status_check_port = 50050
+
+# ZMQ port to communicate with cleaner process
+# (needed if running on Windows)
+cleaner_port = 50051
+
+# Confirmation socket to get a confirmation for each data message sent
+confirmation_port = 50052
