--- a/initscripts/hidra-control-server@.service
+++ b/initscripts/hidra-control-server@.service
@@ -6,6 +6,7 @@ After=network-online.target
 [Service]
 TimeoutStartSec=0
 WorkingDirectory=/opt/hidra
+User=hidra
 ExecStart=/opt/hidra/src/hidra_control/hidra_control_server.py --beamline %i --verbose
 
 [Install]
