Cleanup and pep8 compliance

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -100,8 +100,10 @@ use_cleanup          = False
 #action_time          = 150
 action_time          = 10
 
-# Time (in seconds) since last modification after which a file will be seen as closed
-# (needed if event_detector is inotifyx_events (for clean up) or watchdog_events)
+# Time (in seconds) since last modification after which a file
+# will be seen as closed
+# (needed if event_detector is inotifyx_events (for clean up) or
+#  watchdog_events)
 time_till_closed     = 2
 
 # ZMQ port to get incoming data from
