--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,27 @@
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
+PYDIR = $(shell python -c 'from distutils.sysconfig import get_python_lib; print(get_python_lib())')
 
+override_dh_build:
+
+override_dh_auto_build:
+
+override_dh_auto_install:
+	mkdir -p debian/tmp/$(PYDIR)/hidra
+	mkdir -p debian/tmp/opt/hidra/src/
+	mkdir -p debian/tmp/opt/hidra/conf
+	mkdir -p debian/tmp/opt/hidra/src/shared
+	mkdir -p debian/tmp/lib/systemd/system
+	mkdir -p debian/tmp/var/log/hidra
+	chmod 1777 debian/tmp/var/log/hidra
+	cp src/APIs/hidra/*.py  debian/tmp/$(PYDIR)/hidra
+	cp -r src/receiver debian/tmp/opt/hidra/src
+	cp -r src/sender debian/tmp/opt/hidra/src
+	cp -r src/shared/*.py debian/tmp/opt/hidra/src/shared
+	cp -r src/hidra_control debian/tmp/opt/hidra/src
+	cp -r conf/datamanager.conf debian/tmp/opt/hidra/conf
+	cp -r conf/datareceiver.conf debian/tmp/opt/hidra/conf
+	cp initscripts/*.service debian/tmp/lib/systemd/system
 %:
-	dh $@ --with systemd
+	dh $@ --with python2
