Read run hidra as user defined in the config file

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -13,6 +13,9 @@ log_name            = datamanager.log
 # 10 MB
 log_size            = 10485760
 
+# User as which the service should be running
+username            = hidrauser
+
 # Name with which the service should be running
 procname            = hidra
 
