--- a/initscripts/hidra@.service
+++ b/initscripts/hidra@.service
@@ -6,10 +6,8 @@ After=network-online.target
 [Service]
 TimeoutStartSec=0
 WorkingDirectory=/opt/hidra
-#ExecStartPre=/bin/sh -c 'v=%i; beamline=$${v%_*}; exec /bin/echo USER=$${beamline}user > /opt/hidra/hidra_service_%i'
-#EnvironmentFile=/opt/hidra/hidra_service_%i
-#User=$USER
-ExecStart=/bin/sh -c 'v=%i; beamline=$${v%_*}; exec /usr/bin/sudo -u $${beamline}user /opt/hidra/src/sender/datamanager.py --verbose --config_file /opt/hidra/conf/datamanager_%i.conf --procname hidra_%i'
+EnvironmentFile=/opt/hidra/conf/datamanager_%i.conf
+ExecStart=/bin/sh -c 'exec /usr/bin/sudo -u $username /opt/hidra/src/sender/datamanager.py --verbose --config_file /opt/hidra/conf/datamanager_%i.conf'
 
 [Install]
 WantedBy=multi-user.target
