--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -3,8 +3,8 @@
 #########################################
 
 # Path where the logfile will be created
-log_path            = /opt/hidra/logs
-#log_path            = /var/log/hidra
+#log_path            = /opt/hidra/logs
+log_path            = /var/log/hidra
 
 # Filename used for logging
 log_name            = datamanager.log
