Added option to create fixed subdirs in monitored directory

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -70,6 +70,9 @@ fix_subdirs          = ["commissioning", "current", "local"]
 #                        "current/raw", "current/scratch_bl",
 #                        "local"]
 
+# Flag describing if the subdirectories should be created if they do not exist
+create_fix_subdirs   = False
+
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
 # and "local" are monitored
