Run hidra-receiver as user defined in the config file

--- a/conf/datareceiver.conf
+++ b/conf/datareceiver.conf
@@ -13,6 +13,9 @@ log_name          = datareceiver.log
 # 100MB
 log_size          = 104857600
 
+# User as which the service should be running
+username          = hidrauser
+
 # Name with which the service should be running
 procname          = hidra-receiver
 
