--- a/initscripts/hidra-receiver@.service
+++ b/initscripts/hidra-receiver@.service
@@ -6,8 +6,10 @@ After=network-online.target
 [Service]
 TimeoutStartSec=0
 WorkingDirectory=/opt/hidra
-User=%iuser
-ExecStart=/opt/hidra/src/receiver/datareceiver.py --verbose --config_file /opt/hidra/conf/receiver_%i.conf
+EnvironmentFile=/opt/hidra/conf/receiver_%i.conf
+#User=$username
+#ExecStart=/opt/hidra/src/receiver/datareceiver.py --verbose --config_file /opt/hidra/conf/receiver_%i.conf
+ExecStart=/bin/sh -c 'exec /usr/bin/sudo -u $username /opt/hidra/src/receiver/datareceiver.py --verbose --config_file /opt/hidra/conf/receiver_%i.conf'
 
 [Install]
 WantedBy=multi-user.target
