--- a/conf/datamanager_pilatus.conf
+++ b/conf/datamanager_pilatus.conf
@@ -97,7 +97,7 @@ store_data           = False
 
 # Flag describing if the files should be removed from the source
 # options are:
-# True - data stays on the source
-# False - data is removed from the source after processing it
+# False - data stays on the source
+# True - data is removed from the source after processing it
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
 remove_data          = True
