Moved ldap uri into configuration files

--- a/conf/datamanager_docker.conf
+++ b/conf/datamanager_docker.conf
@@ -29,6 +29,9 @@ com_port            = 50000
 #whitelist           = []
 whitelist           = None
 
+# Ldap node and port needed to check whitelist
+ldapuri = it-ldap-slave.desy.de:1389
+
 # ZMQ port to get new requests
 request_port        = 50001
 
