--- a/conf/datareceiver.conf
+++ b/conf/datareceiver.conf
@@ -30,6 +30,9 @@ whitelist         = None
 #whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "zitpcx22614w", "lsdma-lab04", "zitpcx17858"]
 #whitelist         = ["localhost"]
 
+# Ldap node and port needed to check whitelist
+ldapuri = it-ldap-slave.desy.de:1389
+
 # Where incoming data will be stored to
 target_dir        = /opt/hidra/data/zmq_target
 
