--- a/conf/datareceiver_docker.conf
+++ b/conf/datareceiver_docker.conf
@@ -24,6 +24,9 @@ procname          = hidra-receiver
 whitelist         = None
 #whitelist         = ["localhost"]
 
+# Ldap node and port needed to check whitelist
+ldapuri = it-ldap-slave.desy.de:1389
+
 # Where incoming data will be stored to
 target_dir        = /target
 
