--- a/conf/nexusReceiver.conf
+++ b/conf/nexusReceiver.conf
@@ -22,6 +22,9 @@ log_size          = 104857600
 whitelist         = None
 #whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
 
+# Ldap node  and portneeded to check whitelist
+ldapuri = it-ldap-slave.desy.de:1389
+
 # Where incoming data will be stored to
 target_dir        = /opt/hidra/data/zmq_target
 
