--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -35,6 +35,9 @@ com_port            = 50000
 #whitelist           = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "lsdma-lab04"]
 whitelist           = None
 
+# Ldap node and port needed to check whitelist
+ldapuri = it-ldap-slave.desy.de:1389
+
 # ZMQ port to get new requests
 request_port        = 50001
 
