--- a/conf/datamanager_windows.conf
+++ b/conf/datamanager_windows.conf
@@ -28,6 +28,9 @@ com_port            = 50000
 # List of hosts allowed to connect
 whitelist           = None
 
+# Ldap node and port needed to check whitelist
+ldapuri = it-ldap-slave.desy.de:1389
+
 # ZMQ port to get new requests
 request_port        = 50001
 
