--- a/conf/datareceiver.conf
+++ b/conf/datareceiver.conf
@@ -36,6 +36,12 @@ ldapuri = it-ldap-slave.desy.de:1389
 # Where incoming data will be stored to
 target_dir        = /opt/hidra/data/zmq_target
 
+# Subdirectories which should not be created when data is stored
+#fix_subdirs          = ["commissioning", "current", "local"]
+fix_subdirs          = ["commissioning/raw", "commissioning/scratch_bl",
+                        "current/raw", "current/scratch_bl",
+                        "local"]
+
 # Local IP to connect dataStream to
 # data_stream_ip    = zitpcx22614w.desy.de
 data_stream_ip    = zitpcx19282.desy.de
