Separated sender config + renamed deferred_error_handling into stop_on_error

--- a/conf/datareceiver.conf
+++ b/conf/datareceiver.conf
@@ -3,21 +3,21 @@
 #########################################
 
 # Path where logfile will be created
-log_path          = /opt/hidra/logs
-#log_path          = /var/log/hidra
+log_path = /opt/hidra/logs
+#log_path = /var/log/hidra
 
 # Filename used for logging
-log_name          = datareceiver.log
+log_name = datareceiver.log
 
 # File size before rollover in B (linux only)
 # 100MB
-log_size          = 104857600
+log_size = 104857600
 
 # User as which the service should be running
-username          = hidrauser
+username = hidrauser
 
 # Name with which the service should be running
-procname          = hidra-receiver
+procname = hidra-receiver
 
 #########################################
 ####   DataReceiver Configuration   ####
@@ -25,27 +25,28 @@ procname          = hidra-receiver
 #
 # List of hosts allowed to receive data from
 
-#whitelist         = a3p00-hosts
-whitelist         = None
-#whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "zitpcx22614w", "lsdma-lab04", "zitpcx17858"]
-#whitelist         = ["localhost"]
+#whitelist = a3p00-hosts
+whitelist = None
+#whitelist = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "zitpcx22614w", "lsdma-lab04", "zitpcx17858"]
+#whitelist = ["localhost"]
 
 # Ldap node and port needed to check whitelist
 ldapuri = it-ldap-slave.desy.de:1389
 
 # Where incoming data will be stored to
-target_dir        = /opt/hidra/data/zmq_target
+target_dir = /opt/hidra/data/zmq_target
 
 # Subdirectories which should not be created when data is stored
-#fix_subdirs          = ["commissioning", "current", "local"]
-fix_subdirs          = ["commissioning/raw", "commissioning/scratch_bl",
-                        "current/raw", "current/scratch_bl",
-                        "local"]
+#fix_subdirs = ["commissioning", "current", "local"]
+fix_subdirs = ["commissioning/raw", "commissioning/scratch_bl",
+               "current/raw", "current/scratch_bl",
+               "local"]
 
 # Local IP to connect dataStream to
-# data_stream_ip    = zitpcx22614w.desy.de
-data_stream_ip    = zitpcx19282.desy.de
-#data_stream_ip    = asap3-p00
+data_stream_ip = localhost
+#data_stream_ip = zitpcx22614w.desy.de
+#data_stream_ip = zitpcx19282.desy.de
+#data_stream_ip = asap3-p00
 
 # TCP port of data pipe
-data_stream_port  = 50100
+data_stream_port = 50100
