--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -1,59 +1,29 @@
-#########################################
-####      Logging Configuration      ####
-#########################################
-
 # Path where the logfile will be created
-#log_path            = /opt/hidra/logs
-log_path            = /var/log/hidra
+#log_path = /opt/hidra/logs
+log_path = /var/log/hidra
 
 # Filename used for logging
-log_name            = datamanager.log
-
-# File size before rollover in B (linux only)
-# 10 MB
-log_size            = 10485760
+log_name = datamanager.log
 
 # User as which the service should be running
-username            = hidrauser
+username = hidrauser
 
 # Name with which the service should be running
-procname            = hidra
+procname = hidra
 
 # IP/DNS name of the interface to bind to for external communication
-ext_ip              = 0.0.0.0
-#ext_ip              = asap3-p00
-
-#########################################
-####   SignalHandler Configuration   ####
-#########################################
-
-# Port number to receive signals from
-com_port            = 50000
+ext_ip = 0.0.0.0
+#ext_ip = asap3-p00
 
 # List of hosts allowed to connect
-#whitelist           = []
-#whitelist           = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "lsdma-lab04"]
-whitelist           = None
-
-# Ldap node and port needed to check whitelist
-ldapuri = it-ldap-slave.desy.de:1389
-
-# ZMQ port to get new requests
-request_port        = 50001
-
-# ZMQ port to forward requests
-# (needed if running on Windows)
-request_fw_port     = 50002
-
-# ZMQ port to disribute control signals
-# (needed if running on Windows)
-control_pub_port    = 50005
-control_sub_port    = 50006
+#whitelist = []
+#whitelist = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "lsdma-lab04"]
+whitelist = None
 
 #########################################
 ####   eventdetector Configuration   ####
 #########################################
-
+#
 # Type of event detector to use (options are:
 # inotifyx_events, watchdog_events, zmq_events, http_events)
 # Inotifyx is not python3 compatible,
@@ -68,68 +38,60 @@ event_detector_type = inotifyx_events
 # exist when HiDRA is started and should not be removed during the run.
 # (needed if event_detector is inotifyx_events or watchdog_events
 #  or if data_fetcher is file_fetcher)
-fix_subdirs          = ["commissioning", "current", "local"]
-#fix_subdirs          = ["commissioning/raw", "commissioning/scratch_bl",
-#                        "current/raw", "current/scratch_bl",
-#                        "local"]
+#fix_subdirs = ["commissioning", "current", "local"]
+fix_subdirs = ["commissioning/raw", "commissioning/scratch_bl",
+               "current/raw", "current/scratch_bl",
+               "local"]
 
 # Flag describing if the subdirectories should be created if they do not exist
-create_fix_subdirs   = False
+create_fix_subdirs = False
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
 # and "local" are monitored
 # (needed if event detector is inotifyx_events or watchdog_events)
-monitored_dir        = /opt/hidra/data/source
-#monitored_dir       = /rd
-#monitored_dir       = /ramdisk
+monitored_dir = /opt/hidra/data/source
+#monitored_dir = /rd
+#monitored_dir = /ramdisk
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
 # (needed if event_detector is inotifyx_events or watchdog_events)
-monitored_events     = {"IN_CLOSE_WRITE": [""]}
-#monitored_events     = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
-#                        "IN_MOVED_TO": [".log"]}
-#monitored events     = {"IN_MOVED_TO": [".tif", ".cbf", ".nxs"],
-#                        "IN_CLOSE_WRITE": [".log"]}
-#monitored_events     = {"NO_EVENT_MONITORED": [".cbf"]}
+monitored_events = {"IN_CLOSE_WRITE": [""]}
+#monitored_events = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
+#                    "IN_MOVED_TO": [".log"]}
+#monitored events = {"IN_MOVED_TO": [".tif", ".cbf", ".nxs"],
+#                    "IN_CLOSE_WRITE": [".log"]}
+#monitored_events = {"NO_EVENT_MONITORED": [".cbf"]}
 
 # Number of events stored to look for doubles
 # (needed if event_detector is inotifyx_events or http_events)
-history_size         = 0
+#history_size = 2000
+history_size = 0
 
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
 # (needed if event_detector is inotifyx_events)
-use_cleanup          = False
+use_cleanup = False
 
 # Interval time (in seconds) used for clean up resp. checking of events
 # (only needed if event_detector_type is inotifyx_events together with
 #  use_cleanup enabled or if event_detector is watchdog_events)
-#action_time          = 150
-action_time          = 10
+#action_time = 150
+action_time = 10
 
 # Time (in seconds) since last modification after which a file
 # will be seen as closed
 # (needed if event_detector is inotifyx_events (for clean up) or
 #  watchdog_events)
-time_till_closed     = 2
-
-# ZMQ port to get incoming data from
-# (needed if event_detector_type is hidra_events)
-ext_data_port       = 50101
-
-# ZMQ port to get events from
-# (needed if event_detector_type is zmq_events)
-event_det_port       = 50003
+time_till_closed = 2
 
 # IP/DNS name of the detector
 # (needed if event_detector_type is http_events)
-det_ip             = asap3-mon
+det_ip = asap3-mon
 # API version of the detector
 # (needed if event_detector_type is http_events)
-det_api_version    = 1.6.0
-
+det_api_version = 1.6.0
 
 #########################################
 ####    datafetcher Configuration    ####
@@ -137,76 +99,46 @@ det_api_version    = 1.6.0
 
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
-data_fetcher_type    = file_fetcher
-#data_fetcher_type    = http_fetcher
-#data_fetcher_type    = hidra_fetcher
-#data_fetcher_type    = zmq_fetcher
-
-# If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen to
-# (needed if event_detector_type is zmq_events or if on windows and
-#  event_detector_type is http_events)
-data_fetcher_port    = 50010
-
-# Test signal port to notify the data sender about problems
-# (needed if event_detector_type is hidra_events)
-status_check_resp_port = 50011
-
-# Confirmation socket to send a confirmation for each data message sent
-# (needed if event_detector_type is hidra_events)
-confirmation_resp_port = 50012
-
-# Number of parallel data streams
-number_of_streams    = 8
+data_fetcher_type = file_fetcher
+#data_fetcher_type = http_fetcher
+#data_fetcher_type = hidra_fetcher
+#data_fetcher_type = zmq_fetcher
 
 # Enable ZMQ pipe into storage system
-use_data_stream      = False
+#use_data_stream = True
+use_data_stream = False
+
 # Fixed host and port to send the data to with highest priority
 # (only needed if use_data_stream is enabled)
-data_stream_targets  = [["asap3-p00", 50100]]
-#data_stream_targets  = [["zitpcx19282", 50100]]
-#data_stream_targets  = [["zitpcx22614w", 50100]]
+data_stream_targets = [["asap3-p00", 50100]]
+#data_stream_targets = [["zitpcx19282", 50100]]
+#data_stream_targets = [["zitpcx22614w", 50100]]
 
-# Chunk size of file-parts getting send via zmq
-#1024*1024*10
-chunksize            = 10485760
-#1024*1024*1024
-#chunksize            = 1073741824
-
-# ZMQ-router port which coordinates the load-balancing to the worker-processes
-# (needed if running on Windows)
-router_port          = 50004
-
-# Target directory to move the files into (needed if store_data is enabled)
-local_target         = /opt/hidra/data/target
-#local_target         = /gpfs
+# Number of parallel data streams
+number_of_streams = 8
 
 # Flag describing if the data should be stored in local_target
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
-store_data           = False
+#store_data = False
+store_data = True
+
+# Target directory to move the files into (needed if store_data is enabled)
+local_target = /opt/hidra/data/target
+#local_target = /gpfs
 
 # Flag describing if the files should be removed from the source
 # options are:
 # True - data stays on the source
 # False - data is removed from the source after processing it
-# deferred_error_handling - only supported if use_data_stream is enabled;
-#                           datamanager gets a feedback if the data writing was
-#                           successful
+# stop_on_error - only supported if use_data_stream is enabled;
+#                 datamanager gets a feedback if the data writing was
+#                 successful
 # with_confirmation - only supported if use_data_stream is enabled and
 #                     data_fetcher_type is file_fetcher or http_fetcher;
 #                     data is removed from the source only after the target
 #                     sent a verification
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
-#remove_data          = True
-remove_data          = False
-#remove_data          = deferred_error_handling
-#remove_data          = with_confirmation
-
-# Test signal port to check if the data receiver is having problems
-status_check_port = 50050
-
-# ZMQ port to communicate with cleaner process
-# (needed if running on Windows)
-cleaner_port = 50051
-
-# Confirmation socket to get a confirmation for each data message sent
-confirmation_port = 50052
+#remove_data = True
+remove_data = False
+#remove_data = stop_on_error
+#remove_data = with_confirmation
