Separated receiver config

--- a/conf/datareceiver.conf
+++ b/conf/datareceiver.conf
@@ -1,5 +1,5 @@
 #########################################
-####      Logging Configuration      ####
+####       Base Configuration        ####
 #########################################
 
 # Path where logfile will be created
@@ -9,10 +9,6 @@ log_path = /opt/hidra/logs
 # Filename used for logging
 log_name = datareceiver.log
 
-# File size before rollover in B (linux only)
-# 100MB
-log_size = 104857600
-
 # User as which the service should be running
 username = hidrauser
 
@@ -20,27 +16,17 @@ username = hidrauser
 procname = hidra-receiver
 
 #########################################
-####   DataReceiver Configuration   ####
+####   DataReceiver Configuration    ####
 #########################################
-#
-# List of hosts allowed to receive data from
 
+# List of hosts allowed to receive data from
 #whitelist = a3p00-hosts
 whitelist = None
 #whitelist = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "zitpcx22614w", "lsdma-lab04", "zitpcx17858"]
 #whitelist = ["localhost"]
 
-# Ldap node and port needed to check whitelist
-ldapuri = it-ldap-slave.desy.de:1389
-
 # Where incoming data will be stored to
 target_dir = /opt/hidra/data/zmq_target
-
-# Subdirectories which should not be created when data is stored
-#fix_subdirs = ["commissioning", "current", "local"]
-fix_subdirs = ["commissioning/raw", "commissioning/scratch_bl",
-               "current/raw", "current/scratch_bl",
-               "local"]
 
 # Local IP to connect dataStream to
 data_stream_ip = localhost
