--- a/conf/base_sender.conf
+++ b/conf/base_sender.conf
@@ -73,6 +73,7 @@ status_check_port = 50050
 # ZMQ port to communicate with cleaner process
 # (needed if running on Windows)
 cleaner_port = 50051
+cleaner_trigger_port = 50052
 
 # Confirmation socket to get a confirmation for each data message sent
-confirmation_port = 50052
+confirmation_port = 50053
