Updated documentation in config

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -34,6 +34,14 @@ event_detector_type = inotifyx_events
 #event_detector_type = hidra_events
 #event_detector_type = zmq_events
 
+# Directory to be monitor for changes
+# Inside this directory only the subdirectories "commissioning", "current"
+# and "local" are monitored
+# (needed if event detector is inotifyx_events or watchdog_events)
+monitored_dir = /opt/hidra/data/source
+#monitored_dir = /rd
+#monitored_dir = /ramdisk
+
 # Subdirectories to be monitored and to store data to. These directory have to
 # exist when HiDRA is started and should not be removed during the run.
 # (needed if event_detector is inotifyx_events or watchdog_events
@@ -43,16 +51,10 @@ fix_subdirs = ["commissioning/raw", "commissioning/scratch_bl",
                "current/raw", "current/scratch_bl",
                "local"]
 
-# Flag describing if the subdirectories should be created if they do not exist
+# Flag describing if the subdirectories should be created if they do not exist.
+# This does not affect http_events, hidra_events, zmq_events since they do not
+# use the monitored_dir variable
 create_fix_subdirs = False
-
-# Directory to be monitor for changes
-# Inside this directory only the subdirectories "commissioning", "current"
-# and "local" are monitored
-# (needed if event detector is inotifyx_events or watchdog_events)
-monitored_dir = /opt/hidra/data/source
-#monitored_dir = /rd
-#monitored_dir = /ramdisk
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
@@ -140,5 +142,10 @@ local_target = /opt/hidra/data/target
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
 #remove_data = True
 remove_data = False
+# When an error occurs the datamanager goes into error state till it gets
+# notification that the error on the data receiving side was handled.
 #remove_data = stop_on_error
+# In case that a file could not be transfered, it is not removed from the source
+# Here the datamanager does not go in error state and new files are transfered
+# if possible.
 #remove_data = with_confirmation
