Added comments to config

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -16,8 +16,11 @@ ext_ip = 0.0.0.0
 #ext_ip = asap3-p00
 
 # List of hosts allowed to connect
+# Nobody is allowed to connect
 #whitelist = []
+# The hosts in the list are allowed to connect
 #whitelist = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "lsdma-lab04"]
+# Everybody is allowed to connect
 whitelist = None
 
 #########################################
