Cleanup of some comments

--- a/conf/base_sender.conf
+++ b/conf/base_sender.conf
@@ -1,14 +1,14 @@
-#########################################
-####      Logging Configuration      ####
-#########################################
+# ----------------------------------------------------------------------------
+# Logging Configuration
+# ----------------------------------------------------------------------------
 
 # File size before rollover in B (linux only)
 # 10 MB
 log_size = 10485760
 
-#########################################
-####   SignalHandler Configuration   ####
-#########################################
+# ----------------------------------------------------------------------------
+# SignalHandler Configuration
+# ----------------------------------------------------------------------------
 
 # Port number to receive signals from
 com_port = 50000
@@ -28,10 +28,10 @@ request_fw_port = 50002
 control_pub_port = 50005
 control_sub_port = 50006
 
-#########################################
-####   eventdetector Configuration   ####
-#########################################
-#
+# ----------------------------------------------------------------------------
+# eventdetector Configuration
+# ----------------------------------------------------------------------------
+
 # ZMQ port to get incoming data from
 # (needed if event_detector_type is hidra_events)
 ext_data_port = 50101
@@ -40,11 +40,12 @@ ext_data_port = 50101
 # (needed if event_detector_type is zmq_events)
 event_det_port = 50003
 
-#########################################
-####    datafetcher Configuration    ####
-#########################################
+# ----------------------------------------------------------------------------
+# datafetcher Configuration
+# ----------------------------------------------------------------------------
 
-# If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen to
+# If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen
+# to
 # (needed if event_detector_type is zmq_events or if on windows and
 #  event_detector_type is http_events)
 data_fetcher_port = 50010
