--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -23,10 +23,10 @@ ext_ip = 0.0.0.0
 # Everybody is allowed to connect
 whitelist = None
 
-#########################################
-####   eventdetector Configuration   ####
-#########################################
-#
+# ----------------------------------------------------------------------------
+#   eventdetector Configuration
+# ----------------------------------------------------------------------------
+
 # Type of event detector to use (options are:
 # inotifyx_events, watchdog_events, zmq_events, http_events)
 # Inotifyx is not python3 compatible,
@@ -98,9 +98,9 @@ det_ip = asap3-mon
 # (needed if event_detector_type is http_events)
 det_api_version = 1.6.0
 
-#########################################
-####    datafetcher Configuration    ####
-#########################################
+# ----------------------------------------------------------------------------
+#    datafetcher Configuration
+# ----------------------------------------------------------------------------
 
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
