--- a/conf/datareceiver.conf
+++ b/conf/datareceiver.conf
@@ -1,6 +1,6 @@
-#########################################
-####       Base Configuration        ####
-#########################################
+# ------------------------------------------------------------------------
+# Base Configuration
+# ------------------------------------------------------------------------
 
 # Path where logfile will be created
 log_path = /opt/hidra/logs
@@ -15,9 +15,9 @@ username = hidrauser
 # Name with which the service should be running
 procname = hidra-receiver
 
-#########################################
-####   DataReceiver Configuration    ####
-#########################################
+# ------------------------------------------------------------------------
+# DataReceiver Configuration
+# ------------------------------------------------------------------------
 
 # List of hosts allowed to receive data from
 #whitelist = a3p00-hosts
