--- a/conf/nexusReceiver.conf
+++ b/conf/nexusReceiver.conf
@@ -1,6 +1,6 @@
-#########################################
-####      Logging Configuration      ####
-#########################################
+# ------------------------------------------------------------------------
+# Logging Configuration
+# ------------------------------------------------------------------------
 
 # Path where logfile will be created
 log_path          = /opt/hidra/logs
@@ -12,10 +12,10 @@ log_name          = nexus_receiver.log
 # 100 MB
 log_size          = 104857600
 
-#########################################
-####   DataReceiver Configuration   ####
-#########################################
-#
+# ------------------------------------------------------------------------
+# DataReceiver Configuration
+# ------------------------------------------------------------------------
+
 # List of hosts allowed to receive data from
 
 #whitelist         = a3p02.1-hosts
