--- a/conf/base_receiver.conf
+++ b/conf/base_receiver.conf
@@ -1,14 +1,14 @@
-#########################################
-####        Base Configuration       ####
-#########################################
+# ------------------------------------------------------------------------
+# Base Configuration
+# ------------------------------------------------------------------------
 
 # File size before rollover in B (linux only)
 # 100MB
 log_size = 104857600
 
-#########################################
-####   DataReceiver Configuration    ####
-#########################################
+# ------------------------------------------------------------------------
+# DataReceiver Configuration
+# ------------------------------------------------------------------------
 
 # Ldap node and port needed to check whitelist
 ldapuri = it-ldap-slave.desy.de:1389
