--- a/conf/datamanager_pilatus.conf
+++ b/conf/datamanager_pilatus.conf
@@ -1,6 +1,6 @@
-#########################################
-####      Logging Configuration      ####
-#########################################
+# ------------------------------------------------------------------------
+# Logging Configuration
+# ------------------------------------------------------------------------
 
 # Path where the logfile will be created
 log_path            = /var/log/hidra
@@ -18,9 +18,9 @@ procname            = hidra
 # IP/DNS name of the interface to bind to for external communication
 ext_ip              = 0.0.0.0
 
-#########################################
-####   SignalHandler Configuration   ####
-#########################################
+# ------------------------------------------------------------------------
+# SignalHandler Configuration
+# ------------------------------------------------------------------------
 
 # Port number to receive signals from
 com_port            = 50000
@@ -34,9 +34,9 @@ ldapuri = it-ldap-slave.desy.de:1389
 # ZMQ port to get new requests
 request_port        = 50001
 
-#########################################
-####   EventDetector Configuration   ####
-#########################################
+# ------------------------------------------------------------------------
+# EventDetector Configuration
+# ------------------------------------------------------------------------
 
 # Type of event detector to use (options are:
 # inotifyx_events, watchdog_events, zmq_events, http_events)
@@ -73,9 +73,9 @@ history_size         = 0
 # (needed if eventDetector is inotifyx_events)
 use_cleanup          = False
 
-#########################################
-####    DataFetcher Configuration    ####
-#########################################
+# ------------------------------------------------------------------------
+# DataFetcher Configuration
+# ------------------------------------------------------------------------
 
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
