--- a/conf/datareceiver_docker.conf
+++ b/conf/datareceiver_docker.conf
@@ -1,6 +1,6 @@
-#########################################
-####      Logging Configuration      ####
-#########################################
+# ------------------------------------------------------------------------
+# Logging Configuration
+# ------------------------------------------------------------------------
 
 # Path where logfile will be created
 log_path          = /var/log/hidra
@@ -15,10 +15,10 @@ log_size          = 104857600
 # Name with which the service should be running
 procname          = hidra-receiver
 
-#########################################
-####   DataReceiver Configuration   ####
-#########################################
-#
+# ------------------------------------------------------------------------
+# DataReceiver Configuration
+# ------------------------------------------------------------------------
+
 # List of hosts allowed to receive data from
 
 whitelist         = None
