--- a/test/datamanager.conf
+++ b/test/datamanager.conf
@@ -1,6 +1,6 @@
-#########################################
-####      Logging Configuration      ####
-#########################################
+# ------------------------------------------------------------------------
+# Logging Configuration
+# ------------------------------------------------------------------------
 
 # Path where the logfile will be created
 log_path            = /opt/hidra/logs
@@ -18,9 +18,9 @@ procname            = hidra
 # IP of the interface to bind to for external communication
 ext_ip              = 0.0.0.0
 
-#########################################
-####   SignalHandler Configuration   ####
-#########################################
+# ------------------------------------------------------------------------
+# SignalHandler Configuration
+# ------------------------------------------------------------------------
 
 # Port number to receive signals from
 com_port            = 50000
@@ -40,9 +40,9 @@ request_fw_port     = 50002
 control_pub_port    = 50005
 control_sub_port    = 50006
 
-#########################################
-####   EventDetector Configuration   ####
-#########################################
+# ------------------------------------------------------------------------
+# EventDetector Configuration
+# ------------------------------------------------------------------------
 
 # Type of event detector to use (options are:
 # inotifyx_events, watchdog_events, zmq_events, http_events)
@@ -98,10 +98,9 @@ det_ip             = lsdma-lab04
 # (needed if event_detector_type is http_events)
 det_api_version    = 1.5.0
 
-
-#########################################
-####    DataFetcher Configuration    ####
-#########################################
+# ------------------------------------------------------------------------
+# DataFetcher Configuration
+# ------------------------------------------------------------------------
 
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
